Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82302

Inline component with the same name as existing type leads to crashes

XMLWordPrintable

    • b5f4b92b36f4957452cb0df7ead79d270bc568b5 (qt/qtdeclarative/5.15)

      The type resolution does not work when the name of an inline component clashes with the name of an imported type, and the inline component is looked up unqualified in the same file.

      import QtQuick 2.12
      Item
      {
          visible: true
          width: 800
          height: 680
      
          component Rectangle: Item {}
      
      
          Rectangle {}
      
      }
      

        For Gerrit Dashboard: QTBUG-82302
        # Subject Branch Project Status CR V

            fabiankosmale Fabian Kosmale
            fabiankosmale Fabian Kosmale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes