src/qml/qml/qqmlimport.cpp
@@ -988,6 +988,12 @@ bool QQmlImportNamespace::resolveType(QQmlTypeLoader *typeLoader, const QHashedS
     if (!typeRecursionDetected)
         typeRecursionDetected = &localTypeRecursionDetected;
 
+    if (needsSorting()) {
+        std::stable_sort(imports.begin(), imports.end(), [](QQmlImportInstance *left, QQmlImportInstance *) {
+            return left->isInlineComponent;
+        });
+        setNeedsSorting(false);
+    }
     for (int i=0; i<imports.count(); ++i) {
         const QQmlImportInstance *import = imports.at(i);
         if (import->resolveType(typeLoader, type, vmajor, vminor, type_return, base,
@@ -1045,6 +1051,17 @@ bool QQmlImportNamespace::resolveType(QQmlTypeLoader *typeLoader, const QHashedS
         errors->prepend(error);
     }
     return false;
+}
+
+bool QQmlImportNamespace::needsSorting() const
+{
+    return nextNamespace == this;
+}
+
+void QQmlImportNamespace::setNeedsSorting(bool needsSorting)
+{
+    Q_ASSERT(nextNamespace == this || nextNamespace == nullptr);
+    nextNamespace = needsSorting ? this : nullptr;
 }
 
 QQmlImportsPrivate::QQmlImportsPrivate(QQmlTypeLoader *loader)
@@ -1760,6 +1777,7 @@ bool QQmlImports::addInlineComponentImport(QQmlImportInstance *const importInsta
     importInstance->minversion = 0;
     importInstance->containingType = containingType;
     d->unqualifiedset.imports.push_back(importInstance);
+    d->unqualifiedset.setNeedsSorting(true);
     return true;
 }
 
